--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </section>
 
             <section id="bloque">
-                <img src="images/runnup.png" alt="runnup">
+                <img src="images/womapp.png" alt="womapp">
                 <div class="títuloproyecto">
                     <h3 data-aos="fade-right">
-                        RUNNUP<br>
+                        WOMAPP<br>
                         UX/UI<br>
                     </h3>
                     <h2 data-aos="fade-left">
@@ -54,27 +54,29 @@
                 </div>
                 <div class="descripcionproyecto">
                     <p>
-                        Mobile app for runners to be competitive and sharing their activities
-                        into this social network.
+                        Aapp for women to feel comfortable and safe when going back home
+                        during night or anyother against situation.
                     </p>
                     <h5>Clara Campomanes
-                        November, 2020.
+                        December, 2020.
                     </h5>
 
                 </div>
-                <div class="centrado"><a
-                    target=_blank href="https://claracampomanesgomez.medium.com/estudio-de-caso-runnup-a8fbc8ca9968"><button>go to
+                <div class="centrado"><a target=_blank
+                        href="https://claracampomanesgomez.medium.com/estudio-de-caso-womapp-617fafb9f38c"><button>go to
                             project</button></a>
                     <hr>
                     </hr>
                 </div>
 
+
+
                 <section id="bloque">
-                    <img src="images/kiriku.png" alt="kiriku">
+                    <img src="images/runnup.png" alt="runnup">
                     <div class="títuloproyecto">
                         <h3 data-aos="fade-right">
-                            KIRIKÚ<br>
-                            Y LA BRUJA<br>
+                            RUNNUP<br>
+                            UX/UI<br>
                         </h3>
                         <h2 data-aos="fade-left">
                             2
@@ -82,16 +84,16 @@
                     </div>
                     <div class="descripcionproyecto">
                         <p>
-                            Rebranding and web design
-                            for children bookshop Kirikú y la Bruja.
+                            Mobile app for runners to be competitive and sharing their activities
+                            into this social network.
                         </p>
                         <h5>Clara Campomanes
                             November, 2020.
                         </h5>
 
                     </div>
-                    <div class="centrado"><a
-                        target=_blank href="https://claracampomanesgomez.medium.com/estudio-de-caso-kirik%C3%BA-y-la-bruja-6a23efffc6d5"><button>go
+                    <div class="centrado"><a target=_blank
+                            href="https://claracampomanesgomez.medium.com/estudio-de-caso-runnup-a8fbc8ca9968"><button>go
                                 to
                                 project</button></a>
                         <hr>
@@ -119,8 +121,8 @@
                             </h5>
 
                         </div>
-                        <div class="centrado"><a
-                            target=_blank href="https://claracampomanesgomez.medium.com/estudio-de-caso-c1e2e9af25e8"><button>go
+                        <div class="centrado"><a target=_blank
+                                href="https://claracampomanesgomez.medium.com/estudio-de-caso-c1e2e9af25e8"><button>go
                                     to
                                     project</button></a>
                             <hr>
