--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,10 @@
 
         <main>
             <section id="bloque">
-                <img src="images/runnup.png" alt="runnup">
+                <img src="images/womapp.png" alt="womapp">
                 <div class="títuloproyecto">
                     <h3 data-aos="fade-right">
-                        RUNNUP<br>
+                        WOMAPP<br>
                         UX/UI<br>
                     </h3>
                     <h2 data-aos="fade-left">
@@ -43,27 +43,29 @@
                 </div>
                 <div class="descripcionproyecto">
                     <p>
-                        Mobile app for runners to be competitive and sharing their activities
-                        into this social network.
+                        Aapp for women to feel comfortable and safe when going back home
+                        during night or anyother against situation.
                     </p>
                     <h5>Clara Campomanes
-                        November, 2020.
+                        December, 2020.
                     </h5>
 
                 </div>
-                <div class="centrado"><a
-                    target="_blank" href="https://claracampomanesgomez.medium.com/estudio-de-caso-runnup-a8fbc8ca9968"><button>go to
+                <div class="centrado"><a target=_blank
+                        href="https://claracampomanesgomez.medium.com/estudio-de-caso-womapp-617fafb9f38c"><button>go to
                             project</button></a>
                     <hr>
                     </hr>
                 </div>
 
+
+
                 <section id="bloque">
-                    <img src="images/kiriku.png" alt="kiriku">
+                    <img src="images/runnup.png" alt="runnup">
                     <div class="títuloproyecto">
                         <h3 data-aos="fade-right">
-                            KIRIKÚ<br>
-                            Y LA BRUJA<br>
+                            RUNNUP<br>
+                            UX/UI<br>
                         </h3>
                         <h2 data-aos="fade-left">
                             2
@@ -71,16 +73,16 @@
                     </div>
                     <div class="descripcionproyecto">
                         <p>
-                            Rebranding and web design
-                            for children bookshop Kirikú y la Bruja.
+                            Mobile app for runners to be competitive and sharing their activities
+                            into this social network.
                         </p>
                         <h5>Clara Campomanes
                             November, 2020.
                         </h5>
 
                     </div>
-                    <div class="centrado"><a
-                        target="_blank" href="https://claracampomanesgomez.medium.com/estudio-de-caso-kirik%C3%BA-y-la-bruja-6a23efffc6d5"><button>go
+                    <div class="centrado"><a target=_blank
+                            href="https://claracampomanesgomez.medium.com/estudio-de-caso-runnup-a8fbc8ca9968"><button>go
                                 to
                                 project</button></a>
                         <hr>
@@ -108,18 +110,21 @@
                             </h5>
 
                         </div>
-                        <div class="centrado"><a
-                            target="_blank" href="https://claracampomanesgomez.medium.com/estudio-de-caso-c1e2e9af25e8"><button>go
+                        <div class="centrado"><a target=_blank
+                                href="https://claracampomanesgomez.medium.com/estudio-de-caso-c1e2e9af25e8"><button>go
                                     to
                                     project</button></a>
                             <hr>
                             </hr>
                         </div>
-                        <img src="images/emotness.png" alt="emotness">
+                    </section>
+
+                    <section id="bloque">
+                        <img src="images/kiriku.png" alt="kiriku">
                         <div class="títuloproyecto">
                             <h3 data-aos="fade-right">
-                                EMOTNESS<br>
-                                APP<br>
+                                KIRIKÚ<br>
+                                Y LA BRUJA<br>
                             </h3>
                             <h2 data-aos="fade-left">
                                 4
@@ -127,54 +132,92 @@
                         </div>
                         <div class="descripcionproyecto">
                             <p>
-                                Supporting app for encouraging people to get up his/her emotional state by joining
-                                fitness activities
+                                Rebranding and web design
+                                for children bookshop Kirikú y la Bruja.
                             </p>
                             <h5>Clara Campomanes
-                                October, 2020.
+                                November, 2020.
                             </h5>
 
                         </div>
-
-                        <hr>
-                        </hr>
-
-                        <section id="bloque">
-                            <img src="images/tgb.png" alt="tgb">
-                            <div class="títuloproyecto">
-                                <h3 data-aos="fade-right">
-                                    SELF-SERVICE<br>
-                                    THE GOOD BURGER<br>
-                                </h3>
-                                <h2 data-aos="fade-left">
-                                    5
-                                </h2>
-                            </div>
-                            <div class="descripcionproyecto">
-                                <p>
-                                    UX/UI for TGB|THE GOOD BURGER Spanish fast-food restaurants autopay and self-service
-                                    tpv.
-                                </p>
-                                <h5>Clara Campomanes<br>
-                                    August, 2019.
-                                </h5>
-
-                            </div>
-
+                        <div class="centrado"><a target="_blank"
+                                href="https://claracampomanesgomez.medium.com/estudio-de-caso-kirik%C3%BA-y-la-bruja-6a23efffc6d5"><button>go
+                                    to
+                                    project</button></a>
                             <hr>
                             </hr>
+                        </div>
+                        <hr>
+                        </hr>
+    </div>
+    </section>
 
 
-        </main>
-        <footer>
-            Clara Campomanes 2020<br>
-            claracampomanesgomez@gmail.com
-        </footer>
+    <section id="bloque">
+        <img src="images/emotness.png" alt="emotness">
+        <div class="títuloproyecto">
+            <h3 data-aos="fade-right">
+                EMOTNESS<br>
+                APP<br>
+            </h3>
+            <h2 data-aos="fade-left">
+                5
+            </h2>
+        </div>
+        <div class="descripcionproyecto">
+            <p>
+                Supporting app for encouraging people to get up his/her emotional state by joining
+                fitness activities
+            </p>
+            <h5>Clara Campomanes
+                October, 2020.
+            </h5>
 
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+        </div>
+        <div class="centrado"><a target="_blank"
+                href="https://claracampomanesgomez.medium.com/estudio-de-caso-emotness-3e4e00073321"><button>go
+                    to
+                    project</button></a>
+
+            <hr>
+            </hr>
+
+            <section id="bloque">
+                <img src="images/tgb.png" alt="tgb">
+                <div class="títuloproyecto">
+                    <h3 data-aos="fade-right">
+                        SELF-SERVICE<br>
+                        THE GOOD BURGER<br>
+                    </h3>
+                    <h2 data-aos="fade-left">
+                        6
+                    </h2>
+                </div>
+                <div class="descripcionproyecto">
+                    <p>
+                        UX/UI for TGB|THE GOOD BURGER Spanish fast-food restaurants autopay and self-service
+                        tpv.
+                    </p>
+                    <h5>Clara Campomanes<br>
+                        August, 2019.
+                    </h5>
+
+                </div>
+
+                <hr>
+                </hr>
+
+
+                </main>
+                <footer>
+                    Clara Campomanes 2020<br>
+                    claracampomanesgomez@gmail.com
+                </footer>
+
+                <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                <script>
+                    AOS.init();
+                </script>
 
 </body>
 
